# Applied-Crypto

./: README.md
Assignment1/: Freq.cpp  Freq.hpp  MTP.cpp  MTP.hpp  Master.cpp  Semantic.cpp  Semantic.hpp  Vig.cpp  Vig.hpp  example.txt
Assignment2/: Instructions.txt  Question1.c  Question2.c  a.out  output.txt
Assignment3/: AES.cpp  AES.hpp  BH.cpp  BH.hpp  Master.cpp
Assignment5/: main.py  pyproject.toml
Assignment6/: Applied crypto HW.txt  main.py  pyproject.toml
